cloudbuild.yaml format, add banner support og:image

--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -57,6 +57,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ .URL }}/" />
   <meta property="og:image" content="{{ .Site.Params.avatar }}" />
+  <meta property="og:image" content="{{ .Params.banner }}" />
   <meta property="og:image:alt" content="GCPUG Taipei Logo" />
 
   <!-- Twitter card -->
