--- a/themes/hugo-universal-theme/layouts/partials/widgets/seealso.html
+++ b/themes/hugo-universal-theme/layouts/partials/widgets/seealso.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default sidebar-menu">
     {{ $related := .Site.RegularPages.Related . | first 5 }} {{ with $related }}
     <div class="panel-heading">
-     <h3 class="panel-title">相关文章</h3>
+     <h3 class="panel-title">相關文章</h3>
     </div>
     <div class="panel-body">
      <ul class="nav nav-pills nav-stacked">
